2003-03-01  Patrick Mansfield <patmans@users.sourceforge.net>

	* sierra.c: Fix SIERRA_SKIP_INIT usage and add vendor/product
	  id's for Polaroid PDC 2300Z.

2003-02-27  Marcus Meissner <marcus@jet.franken.de>
	
	* library.c: We support EXIF download.

2003-02-15  Patrick Mansfield <patmans@users.sourceforge.net>

	* sierra.c, sierra.h: Add and use SIERRA_SKIP_INIT for use with 
	  Polaroid PDC 2300Z.

2003-02-15  Patrick Mansfield <patmans@users.sourceforge.net>

	* epson-desc.c, library.c, nikon-desc.c olympus-desc.c
	  sierra-desc.h, sierra.c, sierra.h: Remove use_extended_protocol
	  field and use a bit in the flags field instead.
	* sierra.c: cleanup some of the init code
	* sierra-desc.h: cleanup a comment

2003-02-02  Patrick Mansfield <patmans@users.sourceforge.net>

	* library.c: Add locking support just use the action
	  SIERRA_ACTION_PROT_STATE in sierra_set_locked.

2003-02-02  Patrick Mansfield <patmans@users.sourceforge.net>
	
	* library.c: Allow sierra_get_pic_info to always work even if
	  register 47 return no data - use other registers to get the data. 
	* sierra.c: Use register 43 to get audio, not sierra_get_pic_info,
	  so register 47 is not used prior to downloading.

2003-02-02  Patrick Mansfield <patmans@users.sourceforge.net>

	Idea based on a patch in a bug report from Valentin Rusu
	<sourceforge@valentinrusu.net>, this should also fix other cameras
	that do not return valid data for register 47.

	* library.c, library.h: added sierra_get_size
	* sierra.c: call sierra_get_size to get sizes via register 12 or
	  13, only call sierra_get_pic_info to get sizes for audio files.
	  Treat 0 length file size as unsupported.

2003-01-30  Lutz Mller <lutz@users.sourceforge.net>

	* sierra.h: SierraCamera is not needed any more.
	* sierra.c: Make some calls non-fatal.

2003-01-29  Lutz Mueller <lutz@users.sourceforge.net>

	* sierra.c: It seems the "Agfa ePhoto307" does not support the 