@@ -18,6 +18,7 @@
  * Boston, MA 02111-1307, USA.
  */
 #include <stdio.h>
+#include <stdint.h>
 #include <sys/types.h>
 #include <stdlib.h>
 #include <string.h>
